using Twizzar.SharedKernel.CoreInterfaces;

namespace Twizzar.Runtime.CoreInterfaces.FixtureItem.Definition.ValueDefinitions
{
    /// <summary>
    /// Describes how the value is constructed.
    /// </summary>
    public interface IValueDefinition : IValueObject
    {
    }
}
